--- a/CuentaAhorros/nbproject/project.properties
+++ b/CuentaAhorros/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cuentaahorros.CuentaAhorros
+main.class=cuentaahorros.CuentaAhorroTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
